--- a/15-viz.tex
+++ b/15-viz.tex
@@ -7,8 +7,7 @@ So far we have been learning the Python language and then
 learning how to use Python, the network, and databases 
 to manipulate data.
 
-In this chapter, we take a look at 
-three 
+In this chapter, we take a look at three 
 complete applications that bring all of these things together
 to manage and visualize data.  You  might use these applications 
 as sample code to help get you started in solving a
@@ -35,8 +34,8 @@ To get started, download the application from:
 \url{www.py4inf.com/code/geodata.zip}
 
 The first problem to solve is that the free Google geocoding
-API is rate limited to some number of requests per day.  So if you have
-a lot of data you might need to stop and restart the lookup
+API is rate-limited to a certain number of requests per day.  If you have
+a lot of data, you might need to stop and restart the lookup
 process several times.  So we break the problem into two
 phases.  
 
@@ -51,12 +50,12 @@ particular line of input.  The database is functioning as a
 local ``cache'' of our geocoding data to make sure we never ask 
 Google for the same data twice.
 
-You can re-start the process at any time by removing the file
+You can restart the process at any time by removing the file
 {\bf geodata.sqlite}.
 
 Run the {\bf geoload.py} program.   This program will read the input
 lines in {\bf where.data} and for each line check to see if it is already
-in the database and if we don't have the data for the location,
+in the database.  If we don't have the data for the location, it will
 call the geocoding API to retrieve the data and store it in 
 the database.
 
@@ -88,10 +87,10 @@ Retrieved 1749 characters {    "results" : [
 \afterverb
 %
 The first five locations are already in the database and so they 
-are skipped.  The program scans to the point where it finds un-retrieved
+are skipped.  The program scans to the point where it finds new
 locations and starts retrieving them.
 
-The {\bf geoload.py} can be stopped at any time, and there is a counter 
+The {\bf geoload.py} program can be stopped at any time, and there is a counter 
 that you can use to limit the number of calls to the geocoding
 API for each run.  Given that the {\bf where.data} only has a few hundred
 data items, you should not run into the daily rate limit, but if you 
@@ -137,7 +136,7 @@ myData = [
 %
 This is a JavaScript variable that contains a list of lists.  
 The syntax for JavaScript list constants is very similar to 
-Python so the syntax should be familiar to you.
+Python, so the syntax should be familiar to you.
 
 Simply open {\bf where.html} in a browser to see the locations.  You 
 can hover over each map pin to find the location that the 
@@ -151,9 +150,9 @@ want to check the JavaScript or developer console for your browser.
 \index{Visualization!page rank}
 
 In this application, we will perform some of the functions of a search
-engine.   We will first spider a small subset of the web and then run
+engine.   We will first spider a small subset of the web and run
 a simplified version of the Google page rank algorithm to
-determine which pages are most highly connected and then visualize
+determine which pages are most highly connected, and then visualize
 the page rank and connectivity of our small corner of the web.
 We will use the D3 JavaScript visualization library 
 \url{http://d3js.org/} to produce the visualization output.
@@ -170,7 +169,7 @@ The first program ({\bf spider.py}) program crawls a web
 site and pulls a series of pages into the
 database ({\bf spider.sqlite}), recording the links between pages.
 You can restart the process at any time by removing the 
-{\bf spider.sqlite} file and re-running {\bf spider.py}.
+{\bf spider.sqlite} file and rerunning {\bf spider.py}.
 
 \beforeverb
 \begin{verbatim}
@@ -185,7 +184,7 @@ How many pages:
 %
 In this sample run, we told it to crawl a website and retrieve two 
 pages.  If you restart the program and tell it to crawl more
-pages, it will not re-crawl any pages already in the database.  Upon 
+pages, it will not recrawl any pages already in the database.  Upon 
 restart it goes to a random non-crawled page and starts there.  So 
 each successive run of {\bf spider.py} is additive.
 
@@ -201,8 +200,8 @@ How many pages:
 \end{verbatim}
 \afterverb
 %
-You can have multiple starting points in the same database - 
-within the program these are called ``webs''.   The spider
+You can have multiple starting points in the same database---within
+the program, these are called ``webs''.   The spider
 chooses randomly amongst all non-visited links across all
 the webs as the next page to spider.
 
@@ -251,10 +250,10 @@ You can dump the database again to see that page rank has been updated:
 You can run {\bf sprank.py} as many times as you like and it will simply refine
 the page rank each time you run it.  You can even run {\bf sprank.py} a few times
 and then go spider a few more pages sith {\bf spider.py} and then run {\bf sprank.py}
-to re-converge the page rank values.  A search engine usually runs both the crawling and 
+to reconverge the page rank values.  A search engine usually runs both the crawling and 
 ranking programs all the time.
 
-If you want to restart the page rank calculations without re-spidering the 
+If you want to restart the page rank calculations without respidering the 
 web pages, you can use {\bf spreset.py} and then restart {\bf sprank.py}.
 
 \beforeverb
@@ -283,8 +282,7 @@ How many iterations:50
 For each iteration of the page rank algorithm it prints the average
 change in page rank per page.   The network initially is quite
 unbalanced and so the individual page rank values change wildly between
-iterations.
-But in a few short iterations, the page rank converges.  You
+iterations. But in a few short iterations, the page rank converges.  You
 should run {\bf prank.py} long enough that the page rank values converge.
 
 If you want to visualize the current top pages in terms of page rank,
@@ -302,21 +300,21 @@ Open force.html in a browser to view the visualization
 %
 You can view this data by opening the file {\bf force.html} in your web browser.  
 This shows an automatic layout of the nodes and links.  You can click and 
-drag any node and you can also double click on a node to find the URL
+drag any node and you can also double-click on a node to find the URL
 that is represented by the node.
 
-If you re-run the other utilities, re-run {\bf spjson.py} 
+If you rerun the other utilities, rerun {\bf spjson.py} and
 press refresh in the browser to get the new data from {\bf spider.json}.
 
 \section{Visualizing mail data}
 
 Up to this point in the book, you have become quite familiar with our 
 {\bf mbox-short.txt} and {\bf mbox.txt} data files.   Now it is time to take
-our analysis of e-mail data to the next level.  
+our analysis of email data to the next level.  
 
-In the real world, sometimes you have to pull down mail data from servers
-and that might take quite some time and the data might be inconsistent, 
-error filled and need a lot of cleanup or adjustment.  In this section, we
+In the real world, sometimes you have to pull down mail data from servers.
+That might take quite some time and the data might be inconsistent, 
+error-filled, and need a lot of cleanup or adjustment.  In this section, we
 work with an application that is the most complex so far and pull down nearly a 
 gigabyte of data and visualize it.
 
@@ -328,10 +326,10 @@ You can download this application from:
 
 \url{www.py4inf.com/code/gmane.zip}
 
-We will be using data from a free e-mail list archiving service called 
-\url{www.gmane.org}.  This service is very popular with open-source
+We will be using data from a free email list archiving service called 
+\url{www.gmane.org}.  This service is very popular with open source
 projects because it provides a nice searchable archive of their 
-e-mail activity.  They also have a very liberal policy regarding accessing 
+email activity.  They also have a very liberal policy regarding accessing 
 their data through their API.  They have no rate limits, but ask that you 
 don't overload their service and take only the data you need.  You can read
 gmane's terms and conditions at this page:
@@ -343,11 +341,11 @@ responsibly by adding delays to your access of their services and spreading
 long-running jobs over a longer period of time.  Do not abuse this free service
 and ruin it for the rest of us.}
 
-When the Sakai e-mail data was spidered using this software, it produced nearly 
+When the Sakai email data was spidered using this software, it produced nearly 
 a Gigabyte of data and took a number of runs on several days.
 The file {\bf README.txt} in the above ZIP may have instructions as to how
 you can download a pre-spidered copy of the {\bf content.sqlite} file for 
-a majority of the Sakai e-mail corpus so you don't have to spider for 
+a majority of the Sakai email corpus so you don't have to spider for 
 five days just to run the programs.  If you download the pre-spidered
 content, you should still run the spidering process to catch up with 
 more recent messages.
@@ -361,7 +359,7 @@ switch the base url.
 The {\bf gmane.py} file operates as a responsible caching spider in 
 that it runs slowly and retrieves one mail message per second so 
 as to avoid getting throttled by gmane.   It stores all of
-its data in a database and can be interrupted and re-started 
+its data in a database and can be interrupted and restarted 
 as often as needed.   It may take many hours to pull all the data
 down.  So you may need to restart several times.
 
@@ -401,24 +399,24 @@ phase of the process.
 
 One nice thing is that once you have spidered all of the messages and have them in 
 {\bf content.sqlite}, you can run {\bf gmane.py} again to get new messages as 
-they get sent to the list.  
+they are sent to the list.  
 
 The {\bf content.sqlite} data is pretty raw, with an inefficient data model, 
 and not compressed.
 This is intentional as it allows you to look at {\bf content.sqlite}
 in the SQLite Manager to debug problems with the spidering process.
-It would be a bad idea to run any queries against this database as they 
+It would be a bad idea to run any queries against this database, as they 
 would be quite slow.
 
-The second process is to run the program {\bf gmodel.py}.  This program reads the rough/raw 
+The second process is to run the program {\bf gmodel.py}.  This program reads the raw 
 data from {\bf content.sqlite} and produces a cleaned-up and well-modeled version of the 
-data in the file {\bf index.sqlite}.  The file index.sqlite will be much smaller (often 10X
+data in the file {\bf index.sqlite}.  This file will be much smaller (often 10X
 smaller) than {\bf content.sqlite} because it also compresses the header and body text.
 
-Each time {\bf gmodel.py} runs - it deletes and re-builds {\bf index.sqlite}, allowing
+Each time {\bf gmodel.py} runs it deletes and rebuilds {\bf index.sqlite}, allowing
 you to adjust its parameters and edit the mapping tables in {\bf content.sqlite} to tweak the 
 data cleaning process. This is a sample run of {\bf gmodel.py}.  It prints a line out each time
-250 mail messages are processed so you can see some progress happening as this program may
+250 mail messages are processed so you can see some progress happening, as this program may
 run for a while processing nearly a Gigabyte of mail data.
 
 \beforeverb
@@ -437,8 +435,8 @@ The {\bf gmodel.py} program handles a number of data cleaning tasks.
 
 Domain names are truncated to two levels for .com, .org, .edu, and .net.
 Other domain names are truncated to three levels.  So si.umich.edu becomes
-umich.edu and caret.cam.ac.uk becomes cam.ac.uk.   Also e-mail addresses are
-forced to lower case and some of the @gmane.org address like the following
+umich.edu and caret.cam.ac.uk becomes cam.ac.uk.   Email addresses are also
+forced to lower case, and some of the @gmane.org address like the following
 
 \beforeverb
 \begin{verbatim}
@@ -446,13 +444,13 @@ forced to lower case and some of the @gmane.org address like the following
 \end{verbatim}
 \afterverb
 %
-are converted to the real address whenever there is a matching real e-mail
+are converted to the real address whenever there is a matching real email
 address elsewhere in the message corpus.
 
-If you look in the {\bf content.sqlite} database there are two tables that allow
-you to map both domain names and individual e-mail addresses that change over 
-the lifetime of the e-mail list.  For example, Steve Githens used the following
-e-mail addresses as he changed jobs over the life of the Sakai developer list:
+In the {\bf content.sqlite} database there are two tables that allow
+you to map both domain names and individual email addresses that change over 
+the lifetime of the email list.  For example, Steve Githens used the following
+email addresses as he changed jobs over the life of the Sakai developer list:
 
 \beforeverb
 \begin{verbatim}
@@ -481,11 +479,11 @@ iupui.edu -> indiana.edu
 \end{verbatim}
 \afterverb
 %
-So all the accounts from the various Indiana University campuses are tracked together.
+so all the accounts from the various Indiana University campuses are tracked together.
 
-You can re-run the {\bf gmodel.py} over and over as you look at the data, and add mappings
+You can rerun the {\bf gmodel.py} over and over as you look at the data, and add mappings
 to make the data cleaner and cleaner.   When you are done, you will have a nicely
-indexed version of the e-mail in {\bf index.sqlite}.   This is the file to use to do data
+indexed version of the email in {\bf index.sqlite}.   This is the file to use to do data
 analysis.   With this file, data analysis will be really quick.
 
 The first, simplest data analysis is to determine "who sent the most mail?" and "which 
@@ -515,7 +513,7 @@ unicon.net 2055
 Note how much more quickly {\bf gbasic.py} runs compared to {\bf gmane.py}
 or even {\bf gmodel.py}. They are all working on the same data, but 
 {\bf gbasic.py} is using the compressed and normalized data in 
-{\bf index.sqlite}.  If you have a lot of data to manage, a multi-step
+{\bf index.sqlite}.  If you have a lot of data to manage, a multistep
 process like the one in this application may take a little longer to develop,
 but will save you a lot of time when you really start to explore
 and visualize your data.
@@ -535,7 +533,7 @@ This produces the file {\bf gword.js} which you can visualize using
 {\bf gword.htm} to produce a word cloud similar to the one at the beginning 
 of this section.
 
-A second visualization is produced  by {\bf gline.py}.  It computes e-mail 
+A second visualization is produced  by {\bf gline.py}.  It computes email 
 participation by organizations over time.
 
 \beforeverb
@@ -556,4 +554,4 @@ Its output is written to {\bf gline.js} which is visualized using {\bf gline.htm
 \afterfig
 
 This is a relatively complex and sophisticated application and 
-has features to do some real data retrieval, cleaning and visualization.
+has features to do some real data retrieval, cleaning, and visualization.
